# demo-simple-ringbuf

./: .gitignore  Cargo.toml  LICENSE  Makefile  make_csv.sh
check-feature/: Makefile  README.md
check-feature/src/: main.rs
check-hwcap/: Cargo.toml
check-hwcap/src/: main.rs
reference/: Makefile  main.cc
ringbuf/: Cargo.toml
ringbuf-app/: Cargo.toml
ringbuf-app/src/: helper.rs  main.rs  r0.rs  r1.rs  r2.rs  r3.rs
ringbuf/src/: lib.rs  r0.rs  r1.rs  r2.rs  r3.rs
src/: helper.rs  main.rs  r0.rs  r1.rs  r2.rs  r3.rs
