[package]
name = "simple-ringbuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core_affinity = "0.8.0"
structopt = "0.3.26"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
